# EnvForge

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: cloud-result-retention.yml  embodiedlab-unity-boundary.yml
configs/ml-agents/: mvp1-navigation.yaml  mvp2-visual-navigation.yaml  mvp3-custom-cnn-navigation.yaml  navigation-final-bench-100k.yaml  navigation-final.yaml
docs/: api.md
docs/implementation/: cloud-benchmark-environment-summary-2026-05-26.md  cloud-result-retention.json  cloud-result-retention.md  cloud-training-runner-plan-2026-05-27.md  colab-gpu-benchmark-log-2026-05-26.md  colab-gpu-benchmark-plan.md  embodiedlab-unity-sdk-migration.md  envforge-embodiedlab-contract-phase-1.md  envforge-embodiedlab-contract-phase-2.md  envforge-embodiedlab-contract-phase-3.md  envforge-embodiedlab-contract-phase-4.md  envforge-embodiedlab-contract-phase-5.md  final-navigation-handoff.md  local-first-usability-backlog.md  mvp-0-1-vector-observation-prep.md  mvp-0-manual-navigation.md  mvp-1-ml-agents-adapter.md  mvp-2-visual-segmentation-observation.md  mvp-3-custom-cnn-policy.md  subagent-workflow.md  unity-batchmode-agent-launch.md
docs/vision/: envforge-embodiedlab-cloud-product-roadmap.md  (+1 more)
notebooks/: envforge_colab_gpu_benchmark.ipynb
scripts/: build-unity-windows.ps1  check-unity.ps1  start-unity-d3d11.cmd  start-unity-d3d11.ps1  train-mvp1.sh  train-mvp2.sh  train-mvp3-strict.sh  train-mvp3.sh  train-navigation-final.sh
tests/: test_cloud_result_retention.py  test_embodiedlab_unity_boundary.py
(+128 files in other folders)
