[project]
name = "envforge-local-first"
version = "0.1.0"
description = "Local-first Unity navigation experiments for EnvForge."
requires-python = ">=3.10.1,<=3.10.12"
dependencies = [
    "mlagents==1.1.0",
    "torch~=2.2.1",
]

[dependency-groups]
dev = [
    "pymarkdownlnt>=0.9.37",
    "ruff>=0.11.13",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]
